--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_API_URL=https://localhost:3000/api
+MONGO_URI= mongodb+srv://arshia:123456@cluster0.plspxbh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
