Add NextAuth Provider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@/types/*": ["src/types/*"],
       "@/configs/*": ["src/configs/*"],
       "@/core/*": ["src/core/*"],
+      "@/providers/*": ["src/providers/*"],
       "@/libs/*": ["src/libs/*"],
       "@/api/*": ["src/app/api/*"],
     }
