--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "colord": "^2.9.3",
