--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "colord": "^2.9.3",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.16",
     "react": "^18",
     "react-dom": "^18"
   },
