core: fix Auth route handler

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
+AUTH_URL=http://localhost:3000
+AUTH_SECRET="secretKey124536"
+
 MONGO_URI= mongodb+srv://arshia:Arshia1867@cluster0.plspxbh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
